--- a/unidade-3/Unicus.Acad/Unicus.Acad.Apresentacao.WinForm2/Unicus.Acad.Apresentacao.WinForm2.csproj
+++ b/unidade-3/Unicus.Acad/Unicus.Acad.Apresentacao.WinForm2/Unicus.Acad.Apresentacao.WinForm2.csproj
@@ -36,6 +36,11 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr3.Runtime.3.5.1\lib\net40-client\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="DevExpress.Data.v16.2, Version=16.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v16.2.Core, Version=16.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Sparkline.v16.2.Core, Version=16.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v16.2, Version=16.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraEditors.v16.2, Version=16.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="FluentNHibernate, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentNHibernate.3.0.1\lib\net461\FluentNHibernate.dll</HintPath>
     </Reference>
@@ -58,6 +63,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -71,17 +77,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlunoFormEdit.cs">
+    <Compile Include="Alunos\AlunoFormEdit.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AlunoFormEdit.Designer.cs">
+    <Compile Include="Alunos\AlunoFormEdit.Designer.cs">
       <DependentUpon>AlunoFormEdit.cs</DependentUpon>
     </Compile>
-    <Compile Include="AlunoFormList.cs">
+    <Compile Include="Alunos\AlunoFormList.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AlunoFormList.Designer.cs">
+    <Compile Include="Alunos\AlunoFormList.Designer.cs">
       <DependentUpon>AlunoFormList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cursos\CursoFormEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cursos\CursoFormEdit.Designer.cs">
+      <DependentUpon>CursoFormEdit.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensoes.cs" />
     <Compile Include="PrincipalForm.cs">
@@ -92,15 +104,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AlunoFormEdit.resx">
+    <EmbeddedResource Include="Alunos\AlunoFormEdit.resx">
       <DependentUpon>AlunoFormEdit.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AlunoFormList.resx">
+    <EmbeddedResource Include="Alunos\AlunoFormList.resx">
       <DependentUpon>AlunoFormList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cursos\CursoFormEdit.resx">
+      <DependentUpon>CursoFormEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PrincipalForm.resx">
       <DependentUpon>PrincipalForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -112,6 +128,8 @@
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Unicus.Acad.Dominio.Aluno.datasource" />
+    <None Include="Properties\DataSources\Unicus.Acad.Dominio.Cursos.Curso.datasource" />
+    <None Include="Properties\DataSources\Unicus.Acad.Dominio.Cursos.CursoDisciplina.datasource" />
     <None Include="Properties\DataSources\Unicus.Acad.Dominio.Turmas.Turma.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
